[tool.poetry]
name = "midjourney-interactive"
version = "0.6.0"
description = "Midjourney Interactive"
authors = ["Brayan Alfonzo Barreto Rolong <brayanbarreto1130@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastapi = ">=0.95.0"
pydantic-settings = ">=2.1.0"
webdriver-manager = "^4.0.0"
selenium = "^4.20.0"
fake-useragent = "^1.4.1"
undetected-chromedriver = "^3.7.1"
psutil = "^5.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"